--- a/index.html
+++ b/index.html
@@ -413,27 +413,38 @@
 
     /* ===== DESKTOP ICONS ===== */
     .desktop-icons {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      gap: 8px;
-      padding: 16px;
-      position: relative;
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+      gap: 12px;
+      padding: 20px;
+      position: absolute;
+      inset: 0;
       z-index: 1;
-      max-height: calc(100vh - 68px);
-      align-content: flex-start;
+      justify-content: start;
+      align-content: start;
     }
 
     .desktop-icon {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 75px;
-      padding: 6px;
-      border-radius: 3px;
+      width: 90px;
+      padding: 10px 6px;
+      border-radius: 4px;
       cursor: pointer;
       text-align: center;
       transition: background 0.1s;
+      position: relative;
+    }
+
+    /* When being dragged, use absolute positioning */
+    .desktop-icon.dragging {
+      position: fixed;
+      z-index: 9000;
+      opacity: 0.85;
+      pointer-events: none;
+      background: rgba(220, 38, 38, 0.15);
+      border-radius: 4px;
     }
 
     .desktop-icon:hover {
@@ -446,16 +457,16 @@
     }
 
     .desktop-icon .icon {
-      font-size: 32px;
-      margin-bottom: 4px;
-      filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.8));
+      font-size: 48px;
+      margin-bottom: 6px;
+      filter: drop-shadow(1px 1px 2px rgba(0,0,0,0.8));
     }
 
     .desktop-icon .label {
-      font-size: 11px;
+      font-size: 12px;
       color: #ddd;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.9);
-      line-height: 1.2;
+      line-height: 1.3;
       word-wrap: break-word;
     }
 
@@ -919,8 +930,8 @@
       flex: 1;
       display: flex;
       align-items: center;
-      gap: 3px;
-      padding: 0 4px;
+      gap: 6px;
+      padding: 0 8px;
       overflow-x: auto;
       height: 100%;
     }
@@ -1585,36 +1596,38 @@
       /* Desktop fills screen with smaller offset */
       #desktop {
         top: 24px !important;
-        bottom: 44px !important;
+        bottom: 52px !important;
       }
 
-      /* Desktop icons in a tight grid for mobile */
+      /* Desktop icons in a 3-column grid for bigger icons on mobile */
       .desktop-icons {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 2px;
-        padding: 8px 4px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 6px;
+        padding: 10px 8px;
+        position: relative;
+        inset: auto;
         max-height: none;
         align-content: start;
       }
 
       .desktop-icon {
         width: auto;
-        padding: 6px 2px;
+        padding: 10px 4px;
       }
 
       .desktop-icon .icon {
-        font-size: 26px;
-        margin-bottom: 2px;
+        font-size: 34px;
+        margin-bottom: 4px;
       }
 
       .desktop-icon .label {
-        font-size: 9px;
+        font-size: 10px;
       }
 
-      /* Taskbar compact */
+      /* Taskbar - slightly taller for easier touch */
       #taskbar {
-        height: 40px;
+        height: 48px;
         bottom: 4px;
       }
       #taskbar::after {
@@ -1622,17 +1635,17 @@
         bottom: -4px;
       }
 
-      /* Start button compact */
+      /* Start button - comfortable touch target */
       #start-button {
-        padding: 0 10px 0 6px;
+        padding: 0 12px 0 8px;
         margin-left: 4px;
         border-radius: 8px;
       }
       #start-button .start-icon {
-        font-size: 18px;
+        font-size: 20px;
       }
       #start-button .start-text {
-        font-size: 11px;
+        font-size: 12px;
         letter-spacing: 0.3px;
       }
 
@@ -1646,64 +1659,59 @@
         display: none;
       }
 
-      /* Task buttons much smaller */
+      /* Task buttons - spaced out for touch */
       #task-buttons {
-        gap: 2px;
-        padding: 0 2px;
+        gap: 8px;
+        padding: 0 6px;
       }
       .task-button {
-        height: 28px;
-        min-width: 40px;
-        max-width: 100px;
-        padding: 0 6px;
+        height: 36px;
+        min-width: 44px;
+        max-width: 120px;
+        padding: 0 10px;
         font-size: 10px;
       }
       .task-button .text {
         display: none;
       }
       .task-button .icon {
-        font-size: 14px;
+        font-size: 18px;
       }
 
-      /* System tray compact */
+      /* System tray - comfortable touch targets */
       #system-tray {
-        gap: 4px;
-        padding: 0 2px 0 4px;
+        gap: 6px;
+        padding: 0 4px 0 6px;
       }
       .tray-icon {
-        font-size: 13px;
-        width: 18px;
-        height: 18px;
+        font-size: 16px;
+        width: 24px;
+        height: 24px;
       }
       .tray-separator {
-        margin: 0 2px;
+        margin: 0 3px;
       }
       #clock-area {
-        padding: 0 6px;
-        height: 28px;
-        min-width: 55px;
+        padding: 0 8px;
+        height: 32px;
+        min-width: 60px;
       }
       #clock {
-        font-size: 10px;
+        font-size: 11px;
       }
 
-      /* Windows go full-screen on mobile */
+      /* Windows - near fullscreen by default, but draggable */
       .xp-window {
-        position: fixed !important;
-        top: 24px !important;
-        left: 0 !important;
-        width: 100vw !important;
-        height: calc(100vh - 68px) !important;
-        min-width: 0 !important;
-        min-height: 0 !important;
-        border-radius: 0 !important;
-        z-index: 100 !important;
+        min-width: 0;
+        min-height: 0;
+        border-radius: 6px 6px 0 0;
       }
 
       .xp-window .title-bar {
-        border-radius: 0;
-        min-height: 36px;
-        padding: 3px 8px;
+        border-radius: 5px 5px 0 0;
+        min-height: 40px;
+        padding: 4px 10px;
+        cursor: grab;
       }
 
       .xp-window .title-bar .title {
@@ -1711,13 +1719,12 @@
       }
 
       .title-bar-buttons button {
-        width: 28px;
-        height: 28px;
-        font-size: 12px;
+        width: 30px;
+        height: 30px;
+        font-size: 13px;
       }
 
-      /* Hide minimize/maximize on mobile - only close */
-      .btn-minimize,
+      /* Hide maximize on mobile - keep minimize and close */
       .btn-maximize {
         display: none;
       }
@@ -1778,15 +1785,26 @@
       }
 
       /* Start menu full-width */
+      /* Start menu - fits exactly between taskbar and top of screen */
       #start-menu {
         width: 100vw;
         left: 0;
-        bottom: 44px;
-        border-radius: 8px 8px 0 0;
+        bottom: 52px;
+        top: 0;
+        max-height: calc(100vh - 52px);
+        border-radius: 0;
+        border: none;
+        border-top: 2px solid #3a0000;
+        display: none;
+        flex-direction: column;
+      }
+      #start-menu.open {
+        display: flex;
       }
 
       .start-menu-header {
         padding: 8px 10px;
+        flex-shrink: 0;
       }
       .start-menu-header .avatar {
         width: 36px;
@@ -1799,7 +1817,7 @@
 
       .start-menu-body {
         min-height: 0;
-        max-height: calc(100vh - 180px);
+        flex: 1;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
         flex-direction: column;
@@ -1812,6 +1830,10 @@
 
       .start-menu-right {
         width: 100%;
+      }
+
+      .start-menu-footer {
+        flex-shrink: 0;
       }
 
       .menu-item {
@@ -1917,7 +1939,7 @@
 
       /* Cookie banner mobile */
       #cookie-banner {
-        bottom: 48px;
+        bottom: 56px;
         padding: 12px 14px;
         gap: 10px;
         font-size: 11px;
@@ -2962,13 +2984,21 @@
       win.id = `window-${id}`;
       win.setAttribute('role', 'dialog');
       win.setAttribute('aria-label', def.title);
-      win.style.width = def.width + 'px';
-      win.style.height = def.height + 'px';
-
-      // Position with offset based on number of open windows
-      const offset = Object.keys(windows).length * 30;
-      win.style.left = (80 + offset % 300) + 'px';
-      win.style.top = (40 + offset % 200) + 'px';
+      // Size and position - near-fullscreen on mobile, normal on desktop
+      if (isMobile()) {
+        const winCount = Object.keys(windows).length;
+        const nudge = winCount * 8;
+        win.style.width = 'calc(100vw - ' + (nudge * 2) + 'px)';
+        win.style.height = 'calc(100vh - ' + (110 + nudge) + 'px)';
+        win.style.left = nudge + 'px';
+        win.style.top = nudge + 'px';
+      } else {
+        win.style.width = def.width + 'px';
+        win.style.height = def.height + 'px';
+        const offset = Object.keys(windows).length * 30;
+        win.style.left = (80 + offset % 300) + 'px';
+        win.style.top = (40 + offset % 200) + 'px';
+      }
 
       let toolbarHtml = '';
       if (def.toolbar) {
@@ -3210,10 +3240,10 @@
       });
     });
 
-    // Touch drag for windows (title bar)
+    // Touch drag for windows (title bar) - works on all screen sizes
     document.addEventListener('touchstart', (e) => {
       const titleBar = e.target.closest('.title-bar');
-      if (titleBar && !e.target.closest('.title-bar-buttons') && !isMobile()) {
+      if (titleBar && !e.target.closest('.title-bar-buttons')) {
         const windowId = titleBar.dataset.window;
         if (windows[windowId] && !windows[windowId].maximized) {
           const win = windows[windowId].element;
@@ -3727,6 +3757,76 @@
         icon.classList.add('selected');
       });
     });
+
+    // ===== DRAGGABLE DESKTOP ICONS (desktop only) =====
+    (function initIconDrag() {
+      let iconDrag = null; // { el, startX, startY, origX, origY, moved }
+      const DRAG_THRESHOLD = 5; // px before considered a drag vs click
+
+      document.querySelectorAll('.desktop-icon').forEach(icon => {
+        icon.addEventListener('mousedown', (e) => {
+          if (isMobile()) return;
+          // Don't start drag from inside buttons etc
+          const rect = icon.getBoundingClientRect();
+          iconDrag = {
+            el: icon,
+            startX: e.clientX,
+            startY: e.clientY,
+            origX: rect.left,
+            origY: rect.top,
+            origW: rect.width,
+            origH: rect.height,
+            moved: false
+          };
+        });
+      });
+
+      document.addEventListener('mousemove', (e) => {
+        if (!iconDrag) return;
+        const dx = e.clientX - iconDrag.startX;
+        const dy = e.clientY - iconDrag.startY;
+
+        // Only start visual drag after threshold
+        if (!iconDrag.moved && Math.abs(dx) < DRAG_THRESHOLD && Math.abs(dy) < DRAG_THRESHOLD) return;
+
+        if (!iconDrag.moved) {
+          iconDrag.moved = true;
+          iconDrag.el.classList.add('dragging');
+          iconDrag.el.style.width = iconDrag.origW + 'px';
+          iconDrag.el.style.left = iconDrag.origX + 'px';
+          iconDrag.el.style.top = iconDrag.origY + 'px';
+        }
+
+        iconDrag.el.style.left = (iconDrag.origX + dx) + 'px';
+        iconDrag.el.style.top = (iconDrag.origY + dy) + 'px';
+        e.preventDefault();
+      });
+
+      document.addEventListener('mouseup', (e) => {
+        if (!iconDrag) return;
+        const icon = iconDrag.el;
+        const wasDragged = iconDrag.moved;
+
+        if (wasDragged) {
+          // Keep the icon at its dropped position using absolute positioning within the desktop
+          icon.classList.remove('dragging');
+          const desktopRect = document.getElementById('desktop').getBoundingClientRect();
+          const dropX = parseFloat(icon.style.left) - desktopRect.left;
+          const dropY = parseFloat(icon.style.top) - desktopRect.top;
+          icon.style.position = 'absolute';
+          icon.style.left = dropX + 'px';
+          icon.style.top = dropY + 'px';
+          icon.style.width = iconDrag.origW + 'px';
+
+          // Suppress the dblclick/click that would follow
+          const suppress = (ev) => { ev.stopPropagation(); ev.preventDefault(); };
+          icon.addEventListener('click', suppress, { capture: true, once: true });
+          icon.addEventListener('dblclick', suppress, { capture: true, once: true });
+        }
+
+        iconDrag = null;
+      });
+    })();
 
     // ===== BOOT SEQUENCE =====
     const bootTexts = [
